--- a/easyBook/Base.lproj/Main.storyboard
+++ b/easyBook/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                     <outlet property="delegate" destination="PZd-Pi-Xn5" id="xJL-NA-2W6"/>
                                 </connections>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EDu-7O-OPW">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EDu-7O-OPW">
                                 <rect key="frame" x="0.0" y="364" width="375" height="254"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="separatorColor" name="themeSeperatorColor"/>
@@ -492,7 +492,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="组内/跨组事件" id="lPx-QO-EBS">
                         <barButtonItem key="backBarButtonItem" title=" " id="ay9-0q-S9t"/>
-                        <barButtonItem key="leftBarButtonItem" title="取消" id="d5Q-Bn-RUF">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="d5Q-Bn-RUF">
                             <color key="tintColor" name="themeColor"/>
                             <connections>
                                 <action selector="tapCanelButton:" destination="Vgr-Fq-EOa" id="kvh-sg-3Uc"/>
@@ -521,10 +521,11 @@
         <scene sceneID="cAk-rA-XEv">
             <objects>
                 <tableViewController id="13W-6n-ypH" userLabel="Add Global Event Controller" customClass="AddGlobalEventController" customModule="easyBook" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="56" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="TXf-SA-4wL">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" rowHeight="56" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="TXf-SA-4wL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <inset key="separatorInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <sections>
                             <tableViewSection headerTitle="事件" id="sYA-we-PSH">
                                 <cells>
@@ -709,7 +710,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="全局事件" id="48V-Sb-Stv">
                         <barButtonItem key="backBarButtonItem" title=" " id="fPF-9U-Jun"/>
-                        <barButtonItem key="leftBarButtonItem" title="取消" id="m09-fB-44R">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="m09-fB-44R">
                             <color key="tintColor" name="themeColor"/>
                             <connections>
                                 <action selector="tapCancelbutton:" destination="13W-6n-ypH" id="ZVe-n6-vXv"/>
@@ -737,25 +738,15 @@
         <scene sceneID="lLR-NG-fU0">
             <objects>
                 <tableViewController id="vUB-jt-uwx" userLabel="Group Controller" customClass="GroupController" customModule="easyBook" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="56" estimatedRowHeight="-1" sectionHeaderHeight="22" sectionFooterHeight="1" id="pN4-AU-cCl">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="56" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="pN4-AU-cCl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <color key="separatorColor" name="themeSeperatorColor"/>
-                        <inset key="separatorInset" minX="78" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="搜索群组" id="ABh-71-fgg">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="tintColor" name="themeColor"/>
-                            <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <textInputTraits key="textInputTraits"/>
-                            <connections>
-                                <outlet property="delegate" destination="vUB-jt-uwx" id="bKb-z3-Cdw"/>
-                            </connections>
-                        </searchBar>
+                        <inset key="separatorInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupBasicCell" rowHeight="56" id="P88-Zl-wuW" customClass="GroupBasicCell" customModule="easyBook" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="99.5" width="375" height="56"/>
+                                <rect key="frame" x="0.0" y="55.5" width="375" height="56"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="P88-Zl-wuW" id="cXm-6L-0VG">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="55.5"/>
@@ -796,7 +787,7 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupSubtitleCell" rowHeight="70" id="rHM-fY-k5o" customClass="GroupSubtitleCell" customModule="easyBook" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="155.5" width="375" height="70"/>
+                                <rect key="frame" x="0.0" y="111.5" width="375" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rHM-fY-k5o" id="hyH-uG-gHd">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
@@ -849,6 +840,30 @@
                                     <outlet property="titleLabel" destination="ZgU-in-SGY" id="RHm-dq-Zlc"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyGroupCell" rowHeight="56" id="o23-pf-duB" customClass="MyGroupCell" customModule="easyBook" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="181.5" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="o23-pf-duB" id="TVS-xh-OfA">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="55.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我创建的群组" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBf-8a-YNY">
+                                            <rect key="frame" x="20" y="17.5" width="335" height="21"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="tBf-8a-YNY" secondAttribute="trailing" constant="20" id="EjD-4G-IB1"/>
+                                        <constraint firstItem="tBf-8a-YNY" firstAttribute="leading" secondItem="TVS-xh-OfA" secondAttribute="leading" constant="20" id="Jd5-aK-Y7R"/>
+                                        <constraint firstItem="tBf-8a-YNY" firstAttribute="centerY" secondItem="TVS-xh-OfA" secondAttribute="centerY" id="ZVf-S1-CZK"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="groupNameLabel" destination="tBf-8a-YNY" id="hq0-IS-ddj"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <sections/>
                         <connections>
@@ -857,35 +872,22 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="群组" id="0nh-oT-ifx"/>
-                    <connections>
-                        <outlet property="groupSearchBar" destination="ABh-71-fgg" id="GtD-OG-chQ"/>
-                        <outlet property="searchDisplayController" destination="mdh-80-1pL" id="NNb-C0-5mQ"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="My5-9j-eHg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="mdh-80-1pL">
-                    <connections>
-                        <outlet property="delegate" destination="vUB-jt-uwx" id="pot-1a-SD5"/>
-                        <outlet property="searchBar" destination="ABh-71-fgg" id="FwO-Kf-0Th"/>
-                        <outlet property="searchContentsController" destination="vUB-jt-uwx" id="fUb-z4-Cwy"/>
-                        <outlet property="searchResultsDataSource" destination="vUB-jt-uwx" id="eQj-Fh-d5n"/>
-                        <outlet property="searchResultsDelegate" destination="vUB-jt-uwx" id="Ocm-FK-NL2"/>
-                    </connections>
-                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="2273" y="854"/>
+            <point key="canvasLocation" x="2272.8000000000002" y="853.22338830584715"/>
         </scene>
         <!--Group Navigation-->
         <scene sceneID="DEk-L4-n4f">
             <objects>
-                <navigationController id="JUf-G4-n1I" userLabel="Group Navigation" sceneMemberID="viewController">
+                <navigationController extendedLayoutIncludesOpaqueBars="YES" id="JUf-G4-n1I" userLabel="Group Navigation" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="群组" image="tabBar_group_26x26_" id="qoX-5g-Nus"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backIndicatorImage="back_icon_24x24_" backIndicatorTransitionMaskImage="back_icon_24x24_" id="ZLV-ZP-vf6">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="vUB-jt-uwx" kind="relationship" relationship="rootViewController" id="3Yk-GI-pw8"/>
+                        <segue destination="vUB-jt-uwx" kind="relationship" relationship="rootViewController" id="s5C-hW-vPz"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tre-36-f1F" userLabel="First Responder" sceneMemberID="firstResponder"/>
